Cliff/tap dance (#4)
* Added tap dances

* Changed toggles on keyboard lights

* Added custom keycode

* Changed custom keycode name

* Updated key to not wq vim

* Added additional macros

* Updated tap dance on caps

* Modified esc caps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,6 @@
 	    "editor.formatOnSave": false
     },
     "cmake.configureOnOpen": true,
-    "C_Cpp.errorSquiggles": "Disabled"
+    "C_Cpp.errorSquiggles": "Disabled",
+    "cmake.sourceDirectory": "${workspaceFolder}/lib/googletest"
 }
